Change: first working NodeDiscovery service
